Session4/homework/fault-error-50pp/authors/deployment/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: authors
  labels:
    app: authors
    service: authors
    project: istio-course
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: authors
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors
  labels:
    app: authors
    service: authors
    project: istio-course
spec:
  hosts:
    - authors
  http:
  - fault:
        abort:
          httpStatus: 500
          percentage:
            value: 50
    route:
      - destination:
          host: authors
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authors
  labels:
    app: authors
    project: istio-course
spec:
  host: authors
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authors-v1
  labels:
    app: authors
    version: v1
    project: istio-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authors
      version: v1
      project: istio-course
  template:
    metadata:
      labels:
        app: authors
        version: v1
        project: istio-course
    spec:
      serviceAccountName: servicemesh-authors
      containers:
        - name: authors
          image: neciro/authors-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "500M"
              cpu: "0.15"
            limits:
              memory: "1500M"
              cpu: "0.75"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authors-v2
  labels:
    app: authors
    version: v2
    project: istio-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authors
      version: v2
      project: istio-course
  template:
    metadata:
      labels:
        app: authors
        version: v2
        project: istio-course
    spec:
      serviceAccountName: servicemesh-authors
      containers:
        - name: authors
          image: neciro/authors-service:2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "500M"
              cpu: "0.15"
            limits:
              memory: "1500M"
              cpu: "0.75"
